Entrega 1/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAM ID SEMICOLON a b bloque END
Rule 2     a -> variable
Rule 3     a -> <empty>
Rule 4     b -> funcion b
Rule 5     b -> <empty>
Rule 6     bloque -> LCURLY c RCURLY
Rule 7     c -> estatuto c
Rule 8     c -> <empty>
Rule 9     tipo -> INTTYPE
Rule 10    tipo -> FLOATTYPE
Rule 11    tipo -> CHARTYPE
Rule 12    tipo -> BOOLTYPE
Rule 13    tipo -> STRINGTYPE
Rule 14    estatuto -> asignacion
Rule 15    estatuto -> condicion
Rule 16    estatuto -> escritura
Rule 17    estatuto -> ciclo
Rule 18    variable -> VAR d
Rule 19    d -> e COLON tipo SEMICOLON f
Rule 20    e -> ID
Rule 21    e -> ID LBRACKET RBRACKET COMA e
Rule 22    e -> ID LBRACKET RBRACKET
Rule 23    e -> ID COMA e
Rule 24    f -> d
Rule 25    f -> <empty>
Rule 26    asignacion -> ID g
Rule 27    g -> ASSIGN expresion SEMICOLON
Rule 28    g -> LBRACKET RBRACKET ASSIGN LBRACKET h RBRACKET SEMICOLON
Rule 29    h -> expresion
Rule 30    h -> expresion COMA h
Rule 31    exp -> termino i
Rule 32    i -> j
Rule 33    i -> <empty>
Rule 34    j -> ADDITION exp
Rule 35    j -> SUBTRACTION exp
Rule 36    termino -> factor k
Rule 37    k -> l
Rule 38    k -> <empty>
Rule 39    l -> MULTIPLICATION termino
Rule 40    l -> DIVISION termino
Rule 41    factor -> m
Rule 42    factor -> n
Rule 43    m -> varcte
Rule 44    n -> LPARENTHESIS expresion RPARENTHESIS
Rule 45    expresion -> exp o
Rule 46    o -> LESS exp
Rule 47    o -> GREATER exp
Rule 48    o -> LESSEQUAL exp
Rule 49    o -> GREATEREQUAL exp
Rule 50    o -> NOTEQUAL exp
Rule 51    o -> EQUAL exp
Rule 52    o -> <empty>
Rule 53    varcte -> p
Rule 54    p -> ID q
Rule 55    p -> INT
Rule 56    p -> FLOAT
Rule 57    p -> CHAR
Rule 58    p -> STRING
Rule 59    p -> BOOL
Rule 60    q -> LBRACKET RBRACKET
Rule 61    q -> <empty>
Rule 62    condicion -> IF LPARENTHESIS expresion RPARENTHESIS bloque r
Rule 63    r -> ELSE bloque
Rule 64    r -> <empty>
Rule 65    escritura -> PRINT LPARENTHESIS s RPARENTHESIS SEMICOLON
Rule 66    s -> expresion
Rule 67    s -> QUOTE CTESTRING QUOTE
Rule 68    ciclo -> WHILE LPARENTHESIS expresion RPARENTHESIS bloque
Rule 69    funcion -> tipo FUNC ID LPARENTHESIS t RPARENTHESIS bloque
Rule 70    t -> argumentos
Rule 71    t -> <empty>
Rule 72    argumentos -> u
Rule 73    u -> ID tipo
Rule 74    u -> ID tipo COMA u

Terminals, with rules where they appear

ADDITION             : 34
ASSIGN               : 27 28
BOOL                 : 59
BOOLTYPE             : 12
CHAR                 : 57
CHARTYPE             : 11
COLON                : 19
COMA                 : 21 23 30 74
CTESTRING            : 67
DIVISION             : 40
ELSE                 : 63
END                  : 1
EQUAL                : 51
FLOAT                : 56
FLOATTYPE            : 10
FUNC                 : 69
GREATER              : 47
GREATEREQUAL         : 49
ID                   : 1 20 21 22 23 26 54 69 73 74
IF                   : 62
INT                  : 55
INTTYPE              : 9
LBRACKET             : 21 22 28 28 60
LCURLY               : 6
LESS                 : 46
LESSEQUAL            : 48
LPARENTHESIS         : 44 62 65 68 69
MULTIPLICATION       : 39
NOTEQUAL             : 50
PRINT                : 65
PROGRAM              : 1
QUOTE                : 67 67
RBRACKET             : 21 22 28 28 60
RCURLY               : 6
RPARENTHESIS         : 44 62 65 68 69
SEMICOLON            : 1 19 27 28 65
STRING               : 58
STRINGTYPE           : 13
SUBTRACTION          : 35
VAR                  : 18
WHILE                : 68
error                : 

Nonterminals, with rules where they appear

a                    : 1
argumentos           : 70
asignacion           : 14
b                    : 1 4
bloque               : 1 62 63 68 69
c                    : 6 7
ciclo                : 17
condicion            : 15
d                    : 18 24
e                    : 19 21 23
escritura            : 16
estatuto             : 7
exp                  : 34 35 45 46 47 48 49 50 51
expresion            : 27 29 30 44 62 66 68
f                    : 19
factor               : 36
funcion              : 4
g                    : 26
h                    : 28 30
i                    : 31
j                    : 32
k                    : 36
l                    : 37
m                    : 41
n                    : 42
o                    : 45
p                    : 53
programa             : 0
q                    : 54
r                    : 62
s                    : 65
t                    : 69
termino              : 31 39 40
tipo                 : 19 69 73 74
u                    : 72 74
varcte               : 43
variable             : 2

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAM ID SEMICOLON a b bloque END

    PROGRAM         shift and go to state 1

    programa                       shift and go to state 2

state 1

    (1) programa -> PROGRAM . ID SEMICOLON a b bloque END

    ID              shift and go to state 3


state 2

    (0) S' -> programa .



state 3

    (1) programa -> PROGRAM ID . SEMICOLON a b bloque END

    SEMICOLON       shift and go to state 4


state 4

    (1) programa -> PROGRAM ID SEMICOLON . a b bloque END
    (2) a -> . variable
    (3) a -> .
    (18) variable -> . VAR d

    INTTYPE         reduce using rule 3 (a -> .)
    FLOATTYPE       reduce using rule 3 (a -> .)
    CHARTYPE        reduce using rule 3 (a -> .)
    BOOLTYPE        reduce using rule 3 (a -> .)
    STRINGTYPE      reduce using rule 3 (a -> .)
    LCURLY          reduce using rule 3 (a -> .)
    VAR             shift and go to state 6

    a                              shift and go to state 5
    variable                       shift and go to state 7

state 5

    (1) programa -> PROGRAM ID SEMICOLON a . b bloque END
    (4) b -> . funcion b
    (5) b -> .
    (69) funcion -> . tipo FUNC ID LPARENTHESIS t RPARENTHESIS bloque
    (9) tipo -> . INTTYPE
    (10) tipo -> . FLOATTYPE
    (11) tipo -> . CHARTYPE
    (12) tipo -> . BOOLTYPE
    (13) tipo -> . STRINGTYPE

    LCURLY          reduce using rule 5 (b -> .)
    INTTYPE         shift and go to state 14
    FLOATTYPE       shift and go to state 11
    CHARTYPE        shift and go to state 13
    BOOLTYPE        shift and go to state 8
    STRINGTYPE      shift and go to state 12

    b                              shift and go to state 9
    tipo                           shift and go to state 10
    funcion                        shift and go to state 15

state 6

    (18) variable -> VAR . d
    (19) d -> . e COLON tipo SEMICOLON f
    (20) e -> . ID
    (21) e -> . ID LBRACKET RBRACKET COMA e
    (22) e -> . ID LBRACKET RBRACKET
    (23) e -> . ID COMA e

    ID              shift and go to state 18

    e                              shift and go to state 16
    d                              shift and go to state 17

state 7

    (2) a -> variable .

    INTTYPE         reduce using rule 2 (a -> variable .)
    FLOATTYPE       reduce using rule 2 (a -> variable .)
    CHARTYPE        reduce using rule 2 (a -> variable .)
    BOOLTYPE        reduce using rule 2 (a -> variable .)
    STRINGTYPE      reduce using rule 2 (a -> variable .)
    LCURLY          reduce using rule 2 (a -> variable .)


state 8

    (12) tipo -> BOOLTYPE .

    FUNC            reduce using rule 12 (tipo -> BOOLTYPE .)
    SEMICOLON       reduce using rule 12 (tipo -> BOOLTYPE .)
    COMA            reduce using rule 12 (tipo -> BOOLTYPE .)
    RPARENTHESIS    reduce using rule 12 (tipo -> BOOLTYPE .)


state 9

    (1) programa -> PROGRAM ID SEMICOLON a b . bloque END
    (6) bloque -> . LCURLY c RCURLY

    LCURLY          shift and go to state 19

    bloque                         shift and go to state 20

state 10

    (69) funcion -> tipo . FUNC ID LPARENTHESIS t RPARENTHESIS bloque

    FUNC            shift and go to state 21


state 11

    (10) tipo -> FLOATTYPE .

    FUNC            reduce using rule 10 (tipo -> FLOATTYPE .)
    SEMICOLON       reduce using rule 10 (tipo -> FLOATTYPE .)
    COMA            reduce using rule 10 (tipo -> FLOATTYPE .)
    RPARENTHESIS    reduce using rule 10 (tipo -> FLOATTYPE .)


state 12

    (13) tipo -> STRINGTYPE .

    FUNC            reduce using rule 13 (tipo -> STRINGTYPE .)
    SEMICOLON       reduce using rule 13 (tipo -> STRINGTYPE .)
    COMA            reduce using rule 13 (tipo -> STRINGTYPE .)
    RPARENTHESIS    reduce using rule 13 (tipo -> STRINGTYPE .)


state 13

    (11) tipo -> CHARTYPE .

    FUNC            reduce using rule 11 (tipo -> CHARTYPE .)
    SEMICOLON       reduce using rule 11 (tipo -> CHARTYPE .)
    COMA            reduce using rule 11 (tipo -> CHARTYPE .)
    RPARENTHESIS    reduce using rule 11 (tipo -> CHARTYPE .)


state 14

    (9) tipo -> INTTYPE .

    FUNC            reduce using rule 9 (tipo -> INTTYPE .)
    SEMICOLON       reduce using rule 9 (tipo -> INTTYPE .)
    COMA            reduce using rule 9 (tipo -> INTTYPE .)
    RPARENTHESIS    reduce using rule 9 (tipo -> INTTYPE .)


state 15

    (4) b -> funcion . b
    (4) b -> . funcion b
    (5) b -> .
    (69) funcion -> . tipo FUNC ID LPARENTHESIS t RPARENTHESIS bloque
    (9) tipo -> . INTTYPE
    (10) tipo -> . FLOATTYPE
    (11) tipo -> . CHARTYPE
    (12) tipo -> . BOOLTYPE
    (13) tipo -> . STRINGTYPE

    LCURLY          reduce using rule 5 (b -> .)
    INTTYPE         shift and go to state 14
    FLOATTYPE       shift and go to state 11
    CHARTYPE        shift and go to state 13
    BOOLTYPE        shift and go to state 8
    STRINGTYPE      shift and go to state 12

    b                              shift and go to state 22
    tipo                           shift and go to state 10
    funcion                        shift and go to state 15

state 16

    (19) d -> e . COLON tipo SEMICOLON f

    COLON           shift and go to state 23


state 17

    (18) variable -> VAR d .

    INTTYPE         reduce using rule 18 (variable -> VAR d .)
    FLOATTYPE       reduce using rule 18 (variable -> VAR d .)
    CHARTYPE        reduce using rule 18 (variable -> VAR d .)
    BOOLTYPE        reduce using rule 18 (variable -> VAR d .)
    STRINGTYPE      reduce using rule 18 (variable -> VAR d .)
    LCURLY          reduce using rule 18 (variable -> VAR d .)


state 18

    (20) e -> ID .
    (21) e -> ID . LBRACKET RBRACKET COMA e
    (22) e -> ID . LBRACKET RBRACKET
    (23) e -> ID . COMA e

    COLON           reduce using rule 20 (e -> ID .)
    LBRACKET        shift and go to state 24
    COMA            shift and go to state 25


state 19

    (6) bloque -> LCURLY . c RCURLY
    (7) c -> . estatuto c
    (8) c -> .
    (14) estatuto -> . asignacion
    (15) estatuto -> . condicion
    (16) estatuto -> . escritura
    (17) estatuto -> . ciclo
    (26) asignacion -> . ID g
    (62) condicion -> . IF LPARENTHESIS expresion RPARENTHESIS bloque r
    (65) escritura -> . PRINT LPARENTHESIS s RPARENTHESIS SEMICOLON
    (68) ciclo -> . WHILE LPARENTHESIS expresion RPARENTHESIS bloque

    RCURLY          reduce using rule 8 (c -> .)
    ID              shift and go to state 34
    IF              shift and go to state 33
    PRINT           shift and go to state 32
    WHILE           shift and go to state 30

    c                              shift and go to state 26
    ciclo                          shift and go to state 27
    asignacion                     shift and go to state 28
    estatuto                       shift and go to state 29
    condicion                      shift and go to state 31
    escritura                      shift and go to state 35

state 20

    (1) programa -> PROGRAM ID SEMICOLON a b bloque . END

    END             shift and go to state 36


state 21

    (69) funcion -> tipo FUNC . ID LPARENTHESIS t RPARENTHESIS bloque

    ID              shift and go to state 37


state 22

    (4) b -> funcion b .

    LCURLY          reduce using rule 4 (b -> funcion b .)


state 23

    (19) d -> e COLON . tipo SEMICOLON f
    (9) tipo -> . INTTYPE
    (10) tipo -> . FLOATTYPE
    (11) tipo -> . CHARTYPE
    (12) tipo -> . BOOLTYPE
    (13) tipo -> . STRINGTYPE

    INTTYPE         shift and go to state 14
    FLOATTYPE       shift and go to state 11
    CHARTYPE        shift and go to state 13
    BOOLTYPE        shift and go to state 8
    STRINGTYPE      shift and go to state 12

    tipo                           shift and go to state 38

state 24

    (21) e -> ID LBRACKET . RBRACKET COMA e
    (22) e -> ID LBRACKET . RBRACKET

    RBRACKET        shift and go to state 39


state 25

    (23) e -> ID COMA . e
    (20) e -> . ID
    (21) e -> . ID LBRACKET RBRACKET COMA e
    (22) e -> . ID LBRACKET RBRACKET
    (23) e -> . ID COMA e

    ID              shift and go to state 18

    e                              shift and go to state 40

state 26

    (6) bloque -> LCURLY c . RCURLY

    RCURLY          shift and go to state 41


state 27

    (17) estatuto -> ciclo .

    ID              reduce using rule 17 (estatuto -> ciclo .)
    IF              reduce using rule 17 (estatuto -> ciclo .)
    PRINT           reduce using rule 17 (estatuto -> ciclo .)
    WHILE           reduce using rule 17 (estatuto -> ciclo .)
    RCURLY          reduce using rule 17 (estatuto -> ciclo .)


state 28

    (14) estatuto -> asignacion .

    ID              reduce using rule 14 (estatuto -> asignacion .)
    IF              reduce using rule 14 (estatuto -> asignacion .)
    PRINT           reduce using rule 14 (estatuto -> asignacion .)
    WHILE           reduce using rule 14 (estatuto -> asignacion .)
    RCURLY          reduce using rule 14 (estatuto -> asignacion .)


state 29

    (7) c -> estatuto . c
    (7) c -> . estatuto c
    (8) c -> .
    (14) estatuto -> . asignacion
    (15) estatuto -> . condicion
    (16) estatuto -> . escritura
    (17) estatuto -> . ciclo
    (26) asignacion -> . ID g
    (62) condicion -> . IF LPARENTHESIS expresion RPARENTHESIS bloque r
    (65) escritura -> . PRINT LPARENTHESIS s RPARENTHESIS SEMICOLON
    (68) ciclo -> . WHILE LPARENTHESIS expresion RPARENTHESIS bloque

    RCURLY          reduce using rule 8 (c -> .)
    ID              shift and go to state 34
    IF              shift and go to state 33
    PRINT           shift and go to state 32
    WHILE           shift and go to state 30

    c                              shift and go to state 42
    ciclo                          shift and go to state 27
    asignacion                     shift and go to state 28
    estatuto                       shift and go to state 29
    condicion                      shift and go to state 31
    escritura                      shift and go to state 35

state 30

    (68) ciclo -> WHILE . LPARENTHESIS expresion RPARENTHESIS bloque

    LPARENTHESIS    shift and go to state 43


state 31

    (15) estatuto -> condicion .

    ID              reduce using rule 15 (estatuto -> condicion .)
    IF              reduce using rule 15 (estatuto -> condicion .)
    PRINT           reduce using rule 15 (estatuto -> condicion .)
    WHILE           reduce using rule 15 (estatuto -> condicion .)
    RCURLY          reduce using rule 15 (estatuto -> condicion .)


state 32

    (65) escritura -> PRINT . LPARENTHESIS s RPARENTHESIS SEMICOLON

    LPARENTHESIS    shift and go to state 44


state 33

    (62) condicion -> IF . LPARENTHESIS expresion RPARENTHESIS bloque r

    LPARENTHESIS    shift and go to state 45


state 34

    (26) asignacion -> ID . g
    (27) g -> . ASSIGN expresion SEMICOLON
    (28) g -> . LBRACKET RBRACKET ASSIGN LBRACKET h RBRACKET SEMICOLON

    ASSIGN          shift and go to state 47
    LBRACKET        shift and go to state 48

    g                              shift and go to state 46

state 35

    (16) estatuto -> escritura .

    ID              reduce using rule 16 (estatuto -> escritura .)
    IF              reduce using rule 16 (estatuto -> escritura .)
    PRINT           reduce using rule 16 (estatuto -> escritura .)
    WHILE           reduce using rule 16 (estatuto -> escritura .)
    RCURLY          reduce using rule 16 (estatuto -> escritura .)


state 36

    (1) programa -> PROGRAM ID SEMICOLON a b bloque END .

    $end            reduce using rule 1 (programa -> PROGRAM ID SEMICOLON a b bloque END .)


state 37

    (69) funcion -> tipo FUNC ID . LPARENTHESIS t RPARENTHESIS bloque

    LPARENTHESIS    shift and go to state 49


state 38

    (19) d -> e COLON tipo . SEMICOLON f

    SEMICOLON       shift and go to state 50


state 39

    (21) e -> ID LBRACKET RBRACKET . COMA e
    (22) e -> ID LBRACKET RBRACKET .

    COMA            shift and go to state 51
    COLON           reduce using rule 22 (e -> ID LBRACKET RBRACKET .)


state 40

    (23) e -> ID COMA e .

    COLON           reduce using rule 23 (e -> ID COMA e .)


state 41

    (6) bloque -> LCURLY c RCURLY .

    END             reduce using rule 6 (bloque -> LCURLY c RCURLY .)
    ID              reduce using rule 6 (bloque -> LCURLY c RCURLY .)
    IF              reduce using rule 6 (bloque -> LCURLY c RCURLY .)
    PRINT           reduce using rule 6 (bloque -> LCURLY c RCURLY .)
    WHILE           reduce using rule 6 (bloque -> LCURLY c RCURLY .)
    RCURLY          reduce using rule 6 (bloque -> LCURLY c RCURLY .)
    ELSE            reduce using rule 6 (bloque -> LCURLY c RCURLY .)
    INTTYPE         reduce using rule 6 (bloque -> LCURLY c RCURLY .)
    FLOATTYPE       reduce using rule 6 (bloque -> LCURLY c RCURLY .)
    CHARTYPE        reduce using rule 6 (bloque -> LCURLY c RCURLY .)
    BOOLTYPE        reduce using rule 6 (bloque -> LCURLY c RCURLY .)
    STRINGTYPE      reduce using rule 6 (bloque -> LCURLY c RCURLY .)
    LCURLY          reduce using rule 6 (bloque -> LCURLY c RCURLY .)


state 42

    (7) c -> estatuto c .

    RCURLY          reduce using rule 7 (c -> estatuto c .)


state 43

    (68) ciclo -> WHILE LPARENTHESIS . expresion RPARENTHESIS bloque
    (45) expresion -> . exp o
    (31) exp -> . termino i
    (36) termino -> . factor k
    (41) factor -> . m
    (42) factor -> . n
    (43) m -> . varcte
    (44) n -> . LPARENTHESIS expresion RPARENTHESIS
    (53) varcte -> . p
    (54) p -> . ID q
    (55) p -> . INT
    (56) p -> . FLOAT
    (57) p -> . CHAR
    (58) p -> . STRING
    (59) p -> . BOOL

    LPARENTHESIS    shift and go to state 57
    ID              shift and go to state 58
    INT             shift and go to state 66
    FLOAT           shift and go to state 60
    CHAR            shift and go to state 52
    STRING          shift and go to state 56
    BOOL            shift and go to state 64

    expresion                      shift and go to state 59
    varcte                         shift and go to state 54
    m                              shift and go to state 61
    n                              shift and go to state 62
    p                              shift and go to state 63
    termino                        shift and go to state 53
    exp                            shift and go to state 65
    factor                         shift and go to state 55

state 44

    (65) escritura -> PRINT LPARENTHESIS . s RPARENTHESIS SEMICOLON
    (66) s -> . expresion
    (67) s -> . QUOTE CTESTRING QUOTE
    (45) expresion -> . exp o
    (31) exp -> . termino i
    (36) termino -> . factor k
    (41) factor -> . m
    (42) factor -> . n
    (43) m -> . varcte
    (44) n -> . LPARENTHESIS expresion RPARENTHESIS
    (53) varcte -> . p
    (54) p -> . ID q
    (55) p -> . INT
    (56) p -> . FLOAT
    (57) p -> . CHAR
    (58) p -> . STRING
    (59) p -> . BOOL

    QUOTE           shift and go to state 67
    LPARENTHESIS    shift and go to state 57
    ID              shift and go to state 58
    INT             shift and go to state 66
    FLOAT           shift and go to state 60
    CHAR            shift and go to state 52
    STRING          shift and go to state 56
    BOOL            shift and go to state 64

    expresion                      shift and go to state 68
    varcte                         shift and go to state 54
    m                              shift and go to state 61
    n                              shift and go to state 62
    p                              shift and go to state 63
    s                              shift and go to state 69
    termino                        shift and go to state 53
    exp                            shift and go to state 65
    factor                         shift and go to state 55

state 45

    (62) condicion -> IF LPARENTHESIS . expresion RPARENTHESIS bloque r
    (45) expresion -> . exp o
    (31) exp -> . termino i
    (36) termino -> . factor k
    (41) factor -> . m
    (42) factor -> . n
    (43) m -> . varcte
    (44) n -> . LPARENTHESIS expresion RPARENTHESIS
    (53) varcte -> . p
    (54) p -> . ID q
    (55) p -> . INT
    (56) p -> . FLOAT
    (57) p -> . CHAR
    (58) p -> . STRING
    (59) p -> . BOOL

    LPARENTHESIS    shift and go to state 57
    ID              shift and go to state 58
    INT             shift and go to state 66
    FLOAT           shift and go to state 60
    CHAR            shift and go to state 52
    STRING          shift and go to state 56
    BOOL            shift and go to state 64

    expresion                      shift and go to state 70
    varcte                         shift and go to state 54
    m                              shift and go to state 61
    n                              shift and go to state 62
    p                              shift and go to state 63
    termino                        shift and go to state 53
    exp                            shift and go to state 65
    factor                         shift and go to state 55

state 46

    (26) asignacion -> ID g .

    ID              reduce using rule 26 (asignacion -> ID g .)
    IF              reduce using rule 26 (asignacion -> ID g .)
    PRINT           reduce using rule 26 (asignacion -> ID g .)
    WHILE           reduce using rule 26 (asignacion -> ID g .)
    RCURLY          reduce using rule 26 (asignacion -> ID g .)


state 47

    (27) g -> ASSIGN . expresion SEMICOLON
    (45) expresion -> . exp o
    (31) exp -> . termino i
    (36) termino -> . factor k
    (41) factor -> . m
    (42) factor -> . n
    (43) m -> . varcte
    (44) n -> . LPARENTHESIS expresion RPARENTHESIS
    (53) varcte -> . p
    (54) p -> . ID q
    (55) p -> . INT
    (56) p -> . FLOAT
    (57) p -> . CHAR
    (58) p -> . STRING
    (59) p -> . BOOL

    LPARENTHESIS    shift and go to state 57
    ID              shift and go to state 58
    INT             shift and go to state 66
    FLOAT           shift and go to state 60
    CHAR            shift and go to state 52
    STRING          shift and go to state 56
    BOOL            shift and go to state 64

    expresion                      shift and go to state 71
    varcte                         shift and go to state 54
    m                              shift and go to state 61
    n                              shift and go to state 62
    p                              shift and go to state 63
    termino                        shift and go to state 53
    exp                            shift and go to state 65
    factor                         shift and go to state 55

state 48

    (28) g -> LBRACKET . RBRACKET ASSIGN LBRACKET h RBRACKET SEMICOLON

    RBRACKET        shift and go to state 72


state 49

    (69) funcion -> tipo FUNC ID LPARENTHESIS . t RPARENTHESIS bloque
    (70) t -> . argumentos
    (71) t -> .
    (72) argumentos -> . u
    (73) u -> . ID tipo
    (74) u -> . ID tipo COMA u

    RPARENTHESIS    reduce using rule 71 (t -> .)
    ID              shift and go to state 76

    argumentos                     shift and go to state 75
    u                              shift and go to state 73
    t                              shift and go to state 74

state 50

    (19) d -> e COLON tipo SEMICOLON . f
    (24) f -> . d
    (25) f -> .
    (19) d -> . e COLON tipo SEMICOLON f
    (20) e -> . ID
    (21) e -> . ID LBRACKET RBRACKET COMA e
    (22) e -> . ID LBRACKET RBRACKET
    (23) e -> . ID COMA e

    INTTYPE         reduce using rule 25 (f -> .)
    FLOATTYPE       reduce using rule 25 (f -> .)
    CHARTYPE        reduce using rule 25 (f -> .)
    BOOLTYPE        reduce using rule 25 (f -> .)
    STRINGTYPE      reduce using rule 25 (f -> .)
    LCURLY          reduce using rule 25 (f -> .)
    ID              shift and go to state 18

    e                              shift and go to state 16
    d                              shift and go to state 77
    f                              shift and go to state 78

state 51

    (21) e -> ID LBRACKET RBRACKET COMA . e
    (20) e -> . ID
    (21) e -> . ID LBRACKET RBRACKET COMA e
    (22) e -> . ID LBRACKET RBRACKET
    (23) e -> . ID COMA e

    ID              shift and go to state 18

    e                              shift and go to state 79

state 52

    (57) p -> CHAR .

    MULTIPLICATION  reduce using rule 57 (p -> CHAR .)
    DIVISION        reduce using rule 57 (p -> CHAR .)
    ADDITION        reduce using rule 57 (p -> CHAR .)
    SUBTRACTION     reduce using rule 57 (p -> CHAR .)
    RPARENTHESIS    reduce using rule 57 (p -> CHAR .)
    SEMICOLON       reduce using rule 57 (p -> CHAR .)
    COMA            reduce using rule 57 (p -> CHAR .)
    RBRACKET        reduce using rule 57 (p -> CHAR .)
    LESS            reduce using rule 57 (p -> CHAR .)
    GREATER         reduce using rule 57 (p -> CHAR .)
    LESSEQUAL       reduce using rule 57 (p -> CHAR .)
    GREATEREQUAL    reduce using rule 57 (p -> CHAR .)
    NOTEQUAL        reduce using rule 57 (p -> CHAR .)
    EQUAL           reduce using rule 57 (p -> CHAR .)


state 53

    (31) exp -> termino . i
    (32) i -> . j
    (33) i -> .
    (34) j -> . ADDITION exp
    (35) j -> . SUBTRACTION exp

    LESS            reduce using rule 33 (i -> .)
    GREATER         reduce using rule 33 (i -> .)
    LESSEQUAL       reduce using rule 33 (i -> .)
    GREATEREQUAL    reduce using rule 33 (i -> .)
    NOTEQUAL        reduce using rule 33 (i -> .)
    EQUAL           reduce using rule 33 (i -> .)
    RPARENTHESIS    reduce using rule 33 (i -> .)
    SEMICOLON       reduce using rule 33 (i -> .)
    COMA            reduce using rule 33 (i -> .)
    RBRACKET        reduce using rule 33 (i -> .)
    ADDITION        shift and go to state 82
    SUBTRACTION     shift and go to state 83

    i                              shift and go to state 80
    j                              shift and go to state 81

state 54

    (43) m -> varcte .

    MULTIPLICATION  reduce using rule 43 (m -> varcte .)
    DIVISION        reduce using rule 43 (m -> varcte .)
    ADDITION        reduce using rule 43 (m -> varcte .)
    SUBTRACTION     reduce using rule 43 (m -> varcte .)
    LESS            reduce using rule 43 (m -> varcte .)
    GREATER         reduce using rule 43 (m -> varcte .)
    LESSEQUAL       reduce using rule 43 (m -> varcte .)
    GREATEREQUAL    reduce using rule 43 (m -> varcte .)
    NOTEQUAL        reduce using rule 43 (m -> varcte .)
    EQUAL           reduce using rule 43 (m -> varcte .)
    COMA            reduce using rule 43 (m -> varcte .)
    RBRACKET        reduce using rule 43 (m -> varcte .)
    RPARENTHESIS    reduce using rule 43 (m -> varcte .)
    SEMICOLON       reduce using rule 43 (m -> varcte .)


state 55

    (36) termino -> factor . k
    (37) k -> . l
    (38) k -> .
    (39) l -> . MULTIPLICATION termino
    (40) l -> . DIVISION termino

    ADDITION        reduce using rule 38 (k -> .)
    SUBTRACTION     reduce using rule 38 (k -> .)
    LESS            reduce using rule 38 (k -> .)
    GREATER         reduce using rule 38 (k -> .)
    LESSEQUAL       reduce using rule 38 (k -> .)
    GREATEREQUAL    reduce using rule 38 (k -> .)
    NOTEQUAL        reduce using rule 38 (k -> .)
    EQUAL           reduce using rule 38 (k -> .)
    RPARENTHESIS    reduce using rule 38 (k -> .)
    SEMICOLON       reduce using rule 38 (k -> .)
    COMA            reduce using rule 38 (k -> .)
    RBRACKET        reduce using rule 38 (k -> .)
    MULTIPLICATION  shift and go to state 87
    DIVISION        shift and go to state 84

    k                              shift and go to state 85
    l                              shift and go to state 86

state 56

    (58) p -> STRING .

    MULTIPLICATION  reduce using rule 58 (p -> STRING .)
    DIVISION        reduce using rule 58 (p -> STRING .)
    ADDITION        reduce using rule 58 (p -> STRING .)
    SUBTRACTION     reduce using rule 58 (p -> STRING .)
    RPARENTHESIS    reduce using rule 58 (p -> STRING .)
    SEMICOLON       reduce using rule 58 (p -> STRING .)
    COMA            reduce using rule 58 (p -> STRING .)
    RBRACKET        reduce using rule 58 (p -> STRING .)
    LESS            reduce using rule 58 (p -> STRING .)
    GREATER         reduce using rule 58 (p -> STRING .)
    LESSEQUAL       reduce using rule 58 (p -> STRING .)
    GREATEREQUAL    reduce using rule 58 (p -> STRING .)
    NOTEQUAL        reduce using rule 58 (p -> STRING .)
    EQUAL           reduce using rule 58 (p -> STRING .)


state 57
